--- a/structure/main.bib
+++ b/structure/main.bib
@@ -1,42 +1,681 @@
-% !TEX root = ../main.tex
 
-@article{Reference1,
-	Abstract = {We have developed an enhanced Littrow configuration extended cavity diode laser (ECDL) that can be tuned without changing the direction of the output beam. The output of a conventional Littrow ECDL is reflected from a plane mirror fixed parallel to the tuning diffraction grating. Using a free-space Michelson wavemeter to measure the laser wavelength, we can tune the laser over a range greater than 10 nm without any alteration of alignment.},
-	Author = {C. J. Hawthorn and K. P. Weber and R. E. Scholten},
-	Journal = {Review of Scientific Instruments},
-	Month = {12},
-	Number = {12},
-	Numpages = {3},
-	Pages = {4477--4479},
-	Title = {Littrow Configuration Tunable External Cavity Diode Laser with Fixed Direction Output Beam},
-	Volume = {72},
-	Url = {http://link.aip.org/link/?RSI/72/4477/1},
-	Year = {2001}}
+@inproceedings{wang_transbts_2021,
+	location = {Cham},
+	title = {{TransBTS}: Multimodal Brain Tumor Segmentation Using Transformer},
+	isbn = {978-3-030-87193-2},
+	doi = {10.1007/978-3-030-87193-2_11},
+	series = {Lecture Notes in Computer Science},
+	shorttitle = {{TransBTS}},
+	pages = {109--119},
+	booktitle = {Medical Image Computing and Computer Assisted Intervention – {MICCAI} 2021},
+	publisher = {Springer International Publishing},
+	author = {Wang, Wenxuan and Chen, Chen and Ding, Meng and Yu, Hong and Zha, Sen and Li, Jiangyun},
+	editor = {de Bruijne, Marleen and Cattin, Philippe C. and Cotin, Stéphane and Padoy, Nicolas and Speidel, Stefanie and Zheng, Yefeng and Essert, Caroline},
+	date = {2021},
+	langid = {english},
+	keywords = {3D {CNN}, Brain tumor, {MRI}, Segmentation, Transformer, {BraTS} 2019, {BraTS} 2020, Public {DataSet}},
+	file = {Springer Full Text PDF:/home/christophe/Zotero/storage/P6JJ6PM2/Wang et al. - 2021 - TransBTS Multimodal Brain Tumor Segmentation Usin.pdf:application/pdf},
+}
 
-@article{Reference3,
-	Abstract = {Operating a laser diode in an extended cavity which provides frequency-selective feedback is a very effective method of reducing the laser's linewidth and improving its tunability. We have developed an extremely simple laser of this type, built from inexpensive commercial components with only a few minor modifications. A 780~nm laser built to this design has an output power of 80~mW, a linewidth of 350~kHz, and it has been continuously locked to a Doppler-free rubidium transition for several days.},
-	Author = {A. S. Arnold and J. S. Wilson and M. G. Boshier and J. Smith},
-	Journal = {Review of Scientific Instruments},
-	Month = {3},
-	Number = {3},
-	Numpages = {4},
-	Pages = {1236--1239},
-	Title = {A Simple Extended-Cavity Diode Laser},
-	Volume = {69},
-	Url = {http://link.aip.org/link/?RSI/69/1236/1},
-	Year = {1998}}
+@inproceedings{wang_residual_2021,
+	location = {Cham},
+	title = {Residual Feedback Network for Breast Lesion Segmentation in Ultrasound Image},
+	isbn = {978-3-030-87193-2},
+	doi = {10.1007/978-3-030-87193-2_45},
+	series = {Lecture Notes in Computer Science},
+	pages = {471--481},
+	booktitle = {Medical Image Computing and Computer Assisted Intervention – {MICCAI} 2021},
+	publisher = {Springer International Publishing},
+	author = {Wang, Ke and Liang, Shujun and Zhang, Yu},
+	editor = {de Bruijne, Marleen and Cattin, Philippe C. and Cotin, Stéphane and Padoy, Nicolas and Speidel, Stefanie and Zheng, Yefeng and Essert, Caroline},
+	date = {2021},
+	langid = {english},
+	keywords = {Breast lesion segmentation, Residual feedback network, Ultrasound image, Public {DataSet}, {UDIAT}},
+	file = {Springer Full Text PDF:/home/christophe/Zotero/storage/RSL8BC96/Wang et al. - 2021 - Residual Feedback Network for Breast Lesion Segmen.pdf:application/pdf},
+}
 
-@article{Reference2,
-	Abstract = {We present a review of the use of diode lasers in atomic physics with an extensive list of references. We discuss the relevant characteristics of diode lasers and explain how to purchase and use them. We also review the various techniques that have been used to control and narrow the spectral outputs of diode lasers. Finally we present a number of examples illustrating the use of diode lasers in atomic physics experiments. Review of Scientific Instruments is copyrighted by The American Institute of Physics.},
-	Author = {Carl E. Wieman and Leo Hollberg},
-	Journal = {Review of Scientific Instruments},
-	Keywords = {Diode Laser},
-	Month = {1},
-	Number = {1},
-	Numpages = {20},
-	Pages = {1--20},
-	Title = {Using Diode Lasers for Atomic Physics},
-	Volume = {62},
-	Url = {http://link.aip.org/link/?RSI/62/1/1},
-	Year = {1991}}
+@inproceedings{ding_accurate_2017,
+	location = {Cham},
+	title = {Accurate Pulmonary Nodule Detection in Computed Tomography Images Using Deep Convolutional Neural Networks},
+	isbn = {978-3-319-66179-7},
+	doi = {10.1007/978-3-319-66179-7_64},
+	series = {Lecture Notes in Computer Science},
+	pages = {559--567},
+	booktitle = {Medical Image Computing and Computer Assisted Intervention – {MICCAI} 2017},
+	publisher = {Springer International Publishing},
+	author = {Ding, Jia and Li, Aoxue and Hu, Zhiqiang and Wang, Liwei},
+	editor = {Descoteaux, Maxime and Maier-Hein, Lena and Franz, Alfred and Jannin, Pierre and Collins, D. Louis and Duchesne, Simon},
+	date = {2017},
+	langid = {english},
+	keywords = {{CT} scan, {DCNN}, Faster Region-based {CNN}, {LUNA} 2016, Lung nodule detection, {LIDC}-{IDRI} {dataSet}},
+	file = {Submitted Version:/home/christophe/Zotero/storage/V3ZU7C3Q/Ding et al. - 2017 - Accurate Pulmonary Nodule Detection in Computed To.pdf:application/pdf},
+}
 
+@inproceedings{xie_transferable_2017,
+	location = {Cham},
+	title = {Transferable Multi-model Ensemble for Benign-Malignant Lung Nodule Classification on Chest {CT}},
+	isbn = {978-3-319-66179-7},
+	doi = {10.1007/978-3-319-66179-7_75},
+	series = {Lecture Notes in Computer Science},
+	pages = {656--664},
+	booktitle = {Medical Image Computing and Computer Assisted Intervention – {MICCAI} 2017},
+	publisher = {Springer International Publishing},
+	author = {Xie, Yutong and Xia, Yong and Zhang, Jianpeng and Feng, David Dagan and Fulham, Michael and Cai, Weidong},
+	editor = {Descoteaux, Maxime and Maier-Hein, Lena and Franz, Alfred and Jannin, Pierre and Collins, D. Louis and Duchesne, Simon},
+	date = {2017},
+	langid = {english},
+	keywords = {Deep learning, Computed tomography ({CT}), Ensemble learning, Lung nodule classification, {LIDC}-{IDRI} {dataSet}, Transferable multi-model ensemble, {ResNet}-50},
+	file = {Submitted Version:/home/christophe/Zotero/storage/HCWT43NC/Xie et al. - 2017 - Transferable Multi-model Ensemble for Benign-Malig.pdf:application/pdf},
+}
+
+@inproceedings{andrearczyk_automatic_2020,
+	title = {Automatic Segmentation of Head and Neck Tumors and Nodal Metastases in {PET}-{CT} scans},
+	eventtitle = {Medical Imaging with Deep Learning},
+	pages = {33--43},
+	booktitle = {Proceedings of the Third Conference on Medical Imaging with Deep Learning},
+	publisher = {{PMLR}},
+	author = {Andrearczyk, Vincent and Oreiller, Valentin and Vallières, Martin and Castelli, Joel and Elhalawani, Hesham and Jreige, Mario and Boughdad, Sarah and Prior, John O. and Depeursinge, Adrien},
+	date = {2020-09-21},
+	langid = {english},
+	note = {{ISSN}: 2640-3498},
+	keywords = {Deep learning, Head and neck cancer, multimodal, 3D segmentation, {PET} scan, {CT} scan, The cancer imaging archive},
+	file = {Full Text PDF:/home/christophe/Zotero/storage/GCDXKBZB/Andrearczyk et al. - 2020 - Automatic Segmentation of Head and Neck Tumors and.pdf:application/pdf},
+}
+
+@online{national_cancer_institute_what_2007,
+	title = {What Is Cancer? - National Cancer Institute},
+	url = {https://www.cancer.gov/about-cancer/understanding/what-is-cancer},
+	shorttitle = {What Is Cancer?},
+	abstract = {Explanations about what cancer is, how cancer cells differ from normal cells, and genetic changes that cause cancer to grow and spread.},
+	type = {{cgvArticle}},
+	author = {National Cancer Institute},
+	date = {2007-09-17},
+	langid = {english},
+	file = {Snapshot:/home/christophe/Zotero/storage/LQW2IXTE/what-is-cancer.html:text/html},
+}
+
+@online{cleveland_clinic_pet_nodate,
+	title = {{PET} Scan: Tests, Types, Procedure},
+	url = {https://my.clevelandclinic.org/health/diagnostics/10123-pet-scan},
+	shorttitle = {{PET} Scan},
+	abstract = {Positron emission tomography ({PET}) imaging scans use a radioactive tracer to check for signs of cancer, heart disease and brain disorders.},
+	titleaddon = {Cleveland Clinic},
+	author = {Cleveland Clinic},
+	file = {Snapshot:/home/christophe/Zotero/storage/5CJYW8IN/10123-pet-scan.html:text/html},
+}
+
+@article{vallieres_radiomics_2017,
+	title = {Radiomics strategies for risk assessment of tumour failure in head-and-neck cancer},
+	volume = {7},
+	rights = {2017 The Author(s)},
+	issn = {2045-2322},
+	doi = {10.1038/s41598-017-10371-5},
+	pages = {10117},
+	number = {1},
+	journaltitle = {Scientific Reports},
+	shortjournal = {Sci Rep},
+	author = {Vallières, Martin and Kay-Rivest, Emily and Perrin, Léo Jean and Liem, Xavier and Furstoss, Christophe and Aerts, Hugo J. W. L. and Khaouam, Nader and Nguyen-Tan, Phuc Felix and Wang, Chang-Shu and Sultanem, Khalil and Seuntjens, Jan and El Naqa, Issam},
+	date = {2017-08-31},
+	langid = {english},
+	file = {Full Text PDF:/home/christophe/Zotero/storage/7EBS4Y6P/Vallières et al. - 2017 - Radiomics strategies for risk assessment of tumour.pdf:application/pdf;Snapshot:/home/christophe/Zotero/storage/2FHARVX4/s41598-017-10371-5.html:text/html},
+}
+
+@online{innolitics_llc_contour_nodate,
+	title = {Contour Data Attribute – {DICOM} Standard Browser},
+	url = {https://dicom.innolitics.com/ciods/rt-structure-set/roi-contour/30060039/30060040/30060050},
+	author = {Innolitics {LLC}},
+	file = {Contour Data Attribute – DICOM Standard Browser:/home/christophe/Zotero/storage/2H9KQM8H/30060050.html:text/html},
+}
+
+@article{al-dhabyani_dataset_2020,
+	title = {Dataset of breast ultrasound images},
+	volume = {28},
+	issn = {2352-3409},
+	doi = {10.1016/j.dib.2019.104863},
+	pages = {104863},
+	journaltitle = {Data in Brief},
+	shortjournal = {Data in Brief},
+	author = {Al-Dhabyani, Walid and Gomaa, Mohammed and Khaled, Hussien and Fahmy, Aly},
+	date = {2020-02-01},
+	langid = {english},
+	keywords = {Classification, Deep learning, Detection, Segmentation, Breast cancer, Dataset, Medical images, Ultrasound},
+	file = {Full Text:/home/christophe/Zotero/storage/JK6B8CLU/Al-Dhabyani et al. - 2020 - Dataset of breast ultrasound images.pdf:application/pdf;ScienceDirect Snapshot:/home/christophe/Zotero/storage/2UR2WYEI/S2352340919312181.html:text/html},
+}
+
+@article{hancock_lung_2016,
+	title = {Lung nodule malignancy classification using only radiologist-quantified image features as inputs to statistical learning algorithms: probing the Lung Image Database Consortium dataset with two statistical learning methods},
+	volume = {3},
+	issn = {2329-4302},
+	doi = {10.1117/1.JMI.3.4.044504},
+	shorttitle = {Lung nodule malignancy classification using only radiologist-quantified image features as inputs to statistical learning algorithms},
+	pages = {044504},
+	number = {4},
+	journaltitle = {Journal of Medical Imaging},
+	shortjournal = {J. Med. Imag},
+	author = {Hancock, Matthew C. and Magnan, Jerry F.},
+	date = {2016-12-08},
+	langid = {english},
+	file = {Full Text:/home/christophe/Zotero/storage/AZDG28FU/Hancock and Magnan - 2016 - Lung nodule malignancy classification using only r.pdf:application/pdf},
+}
+
+@misc{armato_data_2015,
+	title = {Data From {LIDC}-{IDRI}},
+	publisher = {The Cancer Imaging Archive},
+	author = {Armato, Samuel G. and {McLennan}, Geoffrey and Bidaut, Luc and {McNitt}-Gray, Michael F. and Meyer, Charles R. and Reeves, Anthony P. and Zhao, Binsheng and Aberle, Denise R. and Henschke, Claudia I. and Hoffman, Eric A. and Kazerooni, Ella A. and {MacMahon}, Heber and Van Beek, Edwin J.R. and Yankelevitz, David and Biancardi, Alberto M. and Bland, Peyton H. and Brown, Matthew S. and Engelmann, Roger M. and Laderach, Gary E. and Max, Daniel and Pais, Richard C. and Qing, David P.Y. and Roberts, Rachael Y. and Smith, Amanda R. and Starkey, Adam and Batra, Poonam and Caligiuri, Philip and Farooqi, Ali and Gladish, Gregory W. and Jude, C. Matilda and Munden, Reginald F. and Petkovska, Iva and Quint, Leslie E. and Schwartz, Lawrence H. and Sundaram, Baskaran and Dodd, Lori E. and Fenimore, Charles and Gur, David and Petrick, Nicholas and Freymann, John and Kirby, Justin and Hughes, Brian and Casteele, Alessi Vande and Gupte, Sangeeta and Sallam, Maha and Heath, Michael D. and Kuhn, Michael H. and Dharaiya, Ekta and Burns, Richard and Fryd, David S. and Salganicoff, Marcos and Anand, Vikram and Shreter, Uri and Vastagh, Stephen and Croft, Barbara Y. and Clarke, Laurence P.},
+	editora = {{TCIA} Team},
+	editoratype = {collaborator},
+	date = {2015},
+	doi = {10.7937/K9/TCIA.2015.LO9QL9SX},
+	note = {Type: dataset},
+}
+
+@article{armato_lung_2011,
+	title = {The Lung Image Database Consortium ({LIDC}) and Image Database Resource Initiative ({IDRI}): A Completed Reference Database of Lung Nodules on {CT} Scans: The {LIDC}/{IDRI} thoracic {CT} database of lung nodules},
+	volume = {38},
+	issn = {00942405},
+	doi = {10.1118/1.3528204},
+	shorttitle = {The Lung Image Database Consortium ({LIDC}) and Image Database Resource Initiative ({IDRI})},
+	pages = {915--931},
+	number = {2},
+	journaltitle = {Medical Physics},
+	shortjournal = {Med. Phys.},
+	author = {Armato, Samuel G. and {McLennan}, Geoffrey and Bidaut, Luc and {McNitt}-Gray, Michael F. and Meyer, Charles R. and Reeves, Anthony P. and Zhao, Binsheng and Aberle, Denise R. and Henschke, Claudia I. and Hoffman, Eric A. and Kazerooni, Ella A. and {MacMahon}, Heber and van Beek, Edwin J. R. and Yankelevitz, David and Biancardi, Alberto M. and Bland, Peyton H. and Brown, Matthew S. and Engelmann, Roger M. and Laderach, Gary E. and Max, Daniel and Pais, Richard C. and Qing, David P.-Y. and Roberts, Rachael Y. and Smith, Amanda R. and Starkey, Adam and Batra, Poonam and Caligiuri, Philip and Farooqi, Ali and Gladish, Gregory W. and Jude, C. Matilda and Munden, Reginald F. and Petkovska, Iva and Quint, Leslie E. and Schwartz, Lawrence H. and Sundaram, Baskaran and Dodd, Lori E. and Fenimore, Charles and Gur, David and Petrick, Nicholas and Freymann, John and Kirby, Justin and Hughes, Brian and Vande Casteele, Alessi and Gupte, Sangeeta and Sallam, Maha and Heath, Michael D. and Kuhn, Michael H. and Dharaiya, Ekta and Burns, Richard and Fryd, David S. and Salganicoff, Marcos and Anand, Vikram and Shreter, Uri and Vastagh, Stephen and Croft, Barbara Y. and Clarke, Laurence P.},
+	date = {2011-01-24},
+	langid = {english},
+	file = {Full Text:/home/christophe/Zotero/storage/DSSYTSIP/Armato et al. - 2011 - The Lung Image Database Consortium (LIDC) and Imag.pdf:application/pdf},
+}
+
+@article{clark_cancer_2013,
+	title = {The Cancer Imaging Archive ({TCIA}): Maintaining and Operating a Public Information Repository},
+	volume = {26},
+	issn = {0897-1889, 1618-727X},
+	doi = {10.1007/s10278-013-9622-7},
+	shorttitle = {The Cancer Imaging Archive ({TCIA})},
+	pages = {1045--1057},
+	number = {6},
+	journaltitle = {Journal of Digital Imaging},
+	shortjournal = {J Digit Imaging},
+	author = {Clark, Kenneth and Vendt, Bruce and Smith, Kirk and Freymann, John and Kirby, Justin and Koppel, Paul and Moore, Stephen and Phillips, Stanley and Maffitt, David and Pringle, Michael and Tarbox, Lawrence and Prior, Fred},
+	date = {2013-12},
+	langid = {english},
+	file = {Full Text:/home/christophe/Zotero/storage/XJURDDQU/Clark et al. - 2013 - The Cancer Imaging Archive (TCIA) Maintaining and.pdf:application/pdf},
+}
+
+@misc{vallieres_data_2017,
+	title = {Data from Head-Neck-{PET}-{CT}},
+	publisher = {The Cancer Imaging Archive},
+	author = {Vallières, Martin and Kay-Rivest, Emily and Perrin, Léo and Liem, Xavier and Furstoss, Christophe and Khaouam, Nader and Nguyen-Tan, Phuc and Wang, Chang-Shu and Sultanem, Khalil},
+	editora = {{TCIA} Team},
+	editoratype = {collaborator},
+	date = {2017},
+	doi = {10.7937/K9/TCIA.2017.8OJE5Q00},
+	note = {Type: dataset},
+}
+
+@incollection{navab_u-net_2015,
+	location = {Cham},
+	title = {U-Net: Convolutional Networks for Biomedical Image Segmentation},
+	volume = {9351},
+	isbn = {978-3-319-24573-7 978-3-319-24574-4},
+	shorttitle = {U-Net},
+	pages = {234--241},
+	booktitle = {Medical Image Computing and Computer-Assisted Intervention – {MICCAI} 2015},
+	publisher = {Springer International Publishing},
+	author = {Ronneberger, Olaf and Fischer, Philipp and Brox, Thomas},
+	editor = {Navab, Nassir and Hornegger, Joachim and Wells, William M. and Frangi, Alejandro F.},
+	date = {2015},
+	langid = {english},
+	doi = {10.1007/978-3-319-24574-4_28},
+	note = {Series Title: Lecture Notes in Computer Science},
+	file = {Submitted Version:/home/christophe/Zotero/storage/7NB3XJNX/Ronneberger et al. - 2015 - U-Net Convolutional Networks for Biomedical Image.pdf:application/pdf},
+}
+
+@online{world_health_organization_cancer_nodate,
+	title = {Cancer},
+	url = {https://www.who.int/news-room/fact-sheets/detail/cancer},
+	abstract = {Cancer is a generic term for a large group of diseases that can affect any part of the body.},
+	author = {World Health Organization},
+	langid = {english},
+	file = {Snapshot:/home/christophe/Zotero/storage/MWY9P8E3/cancer.html:text/html},
+}
+
+@online{national_institute_of_biomedical_imaging_and_bioengineering_magnetic_nodate,
+	title = {Magnetic Resonance Imaging ({MRI})},
+	url = {https://www.nibib.nih.gov/science-education/science-topics/magnetic-resonance-imaging-mri},
+	author = {National Institute of Biomedical Imaging \{and\} Bioengineering},
+	file = {Magnetic Resonance Imaging (MRI):/home/christophe/Zotero/storage/SJJYZDKD/magnetic-resonance-imaging-mri.html:text/html},
+}
+
+@online{national_institute_of_biomedical_imaging_and_bioengineering_computed_nodate,
+	title = {Computed Tomography ({CT})},
+	url = {https://www.nibib.nih.gov/science-education/science-topics/computed-tomography-ct},
+	author = {National Institute of Biomedical Imaging \{and\} Bioengineering},
+	file = {Computed Tomography (CT):/home/christophe/Zotero/storage/I7SCM4DG/computed-tomography-ct.html:text/html},
+}
+
+@online{national_institute_of_biomedical_imaging_and_bioengineering_ultrasound_nodate,
+	title = {Ultrasound},
+	url = {https://www.nibib.nih.gov/science-education/science-topics/ultrasound},
+	author = {National Institute of Biomedical Imaging \{and\} Bioengineering},
+	file = {Ultrasound:/home/christophe/Zotero/storage/GPC288KA/ultrasound.html:text/html},
+}
+
+@online{noauthor_about_nodate,
+	title = {About {DICOM}- Overview},
+	url = {https://www.dicomstandard.org/about},
+	titleaddon = {{DICOM}},
+	langid = {english},
+	file = {Snapshot:/home/christophe/Zotero/storage/QXKTSZWP/about-home.html:text/html},
+}
+
+@online{greenway_hounsfield_nodate,
+	title = {Hounsfield unit {\textbar} Radiology Reference Article {\textbar} Radiopaedia.org},
+	url = {https://radiopaedia.org/articles/hounsfield-unit},
+	abstract = {Hounsfield units ({HU}) are a dimensionless unit universally used in computed tomography ({CT}) scanning to express {CT} numbers in a standardized and convenient form. Hounsfield units are obtained from a linear transformation of the measured attenuati...},
+	titleaddon = {Radiopaedia},
+	author = {Greenway, Kyle},
+	langid = {american},
+	file = {Snapshot:/home/christophe/Zotero/storage/Z85G6YT7/hounsfield-unit.html:text/html},
+}
+
+@online{noauthor_segmentation_nodate,
+	title = {segmentation — definition, examples, related words and more at Wordnik},
+	url = {https://www.wordnik.com/words/segmentation},
+	abstract = {All the words},
+	titleaddon = {Wordnik.com},
+	file = {Snapshot:/home/christophe/Zotero/storage/PDTHXJ8Z/segmentation.html:text/html},
+}
+
+@article{lee_p-hydra_2020,
+	title = {P-Hydra: Bridging Transfer Learning And Multitask Learning},
+	shorttitle = {P-Hydra},
+	author = {Lee, Jiyoung and Cuccu, Giuseppe},
+	date = {2020},
+	langid = {english},
+	file = {Full Text:/home/christophe/Zotero/storage/E7RDWYQA/Lee and Cuccu - 2020 - P-Hydra Bridging Transfer Learning And Multitask .pdf:application/pdf},
+}
+
+@online{noauthor_miccai_nodate,
+	title = {{MICCAI}},
+	url = {http://www.miccai.org/},
+	langid = {english},
+	file = {MICCAI:/home/christophe/Zotero/storage/YL79NRFP/www.miccai.org.html:text/html},
+}
+
+@online{noauthor_midl_nodate,
+	title = {{MIDL} 2021},
+	url = {https://2021.midl.io/},
+	abstract = {Medical Imaging with Deep Learning conference, 7-9 July 2021},
+	langid = {english},
+	file = {Snapshot:/home/christophe/Zotero/storage/NL74HR79/2021.midl.io.html:text/html},
+}
+
+@online{noauthor_machine_nodate,
+	title = {Machine Learning for Healthcare},
+	url = {https://www.mlforhc.org},
+	titleaddon = {Machine Learning for Healthcare},
+	langid = {american},
+	file = {Snapshot:/home/christophe/Zotero/storage/XP75MNEM/www.mlforhc.org.html:text/html},
+}
+
+@article{clement_prostate_2020,
+	title = {Prostate Cancer Classification: A Transfer Learning Approach to Integrate Information From Diverse Body Parts},
+	author = {Clement, Julien and Jobin, Johan},
+	date = {2020},
+	langid = {english},
+}
+
+@online{innolitics_llc_all_nodate,
+	title = {All {CIODs} – {DICOM} Standard Browser},
+	url = {https://dicom.innolitics.com/ciods},
+	author = {Innolitics {LLC}},
+	file = {All CIODs – DICOM Standard Browser:/home/christophe/Zotero/storage/YPRHWSDB/ciods.html:text/html},
+}
+
+@article{doi_computer-aided_2007,
+	title = {Computer-aided diagnosis in medical imaging: Historical review, current status and future potential},
+	volume = {31},
+	issn = {0895-6111},
+	doi = {10.1016/j.compmedimag.2007.02.002},
+	series = {Computer-aided Diagnosis ({CAD}) and Image-guided Decision Support},
+	shorttitle = {Computer-aided diagnosis in medical imaging},
+	pages = {198--211},
+	number = {4},
+	journaltitle = {Computerized Medical Imaging and Graphics},
+	shortjournal = {Computerized Medical Imaging and Graphics},
+	author = {Doi, Kunio},
+	date = {2007-06-01},
+	langid = {english},
+	file = {Accepted Version:/home/christophe/Zotero/storage/PC4EM2ZI/Doi - 2007 - Computer-aided diagnosis in medical imaging Histo.pdf:application/pdf},
+}
+
+@online{ibm_cloud_education_what_2021,
+	title = {What is Machine Learning?},
+	url = {https://www.ibm.com/cloud/learn/machine-learning},
+	abstract = {This introduction to machine learning provides an overview of its history, important definitions, applications and concerns within businesses today.},
+	author = {{IBM} Cloud Education},
+	date = {2021-11-05},
+	langid = {english},
+}
+
+@online{mcnulty_what_2018,
+	title = {What is Machine Learning?},
+	url = {https://towardsdatascience.com/what-is-machine-learning-891f23e848da},
+	abstract = {Machine Learning is all around us. What is it exactly?},
+	titleaddon = {Medium},
+	author = {{McNulty}, Keith},
+	date = {2018-08-21},
+	langid = {english},
+	file = {Snapshot:/home/christophe/Zotero/storage/MMWQL4VZ/what-is-machine-learning-891f23e848da.html:text/html},
+}
+
+@online{minaphinant_machine_2018,
+	title = {Machine Learning},
+	url = {https://medium.com/investic/machine-learning-%E0%B8%84%E0%B8%B7%E0%B8%AD%E0%B8%AD%E0%B8%B0%E0%B9%84%E0%B8%A3-fa8bf6663c07},
+	titleaddon = {investic},
+	author = {Minaphinant, Vithan},
+	date = {2018-09-02},
+	langid = {english},
+	file = {Snapshot:/home/christophe/Zotero/storage/F6AZSJZU/machine-learning-คืออะไร-fa8bf6663c07.html:text/html},
+}
+
+@online{noauthor_supervised_2019,
+	title = {Supervised Learning},
+	url = {https://deepai.org/machine-learning-glossary-and-terms/supervised-learning},
+	abstract = {In machine learning and artificial intelligence, Supervised Learning refers to a class of systems and algorithms that determine a predictive model using data points with known outcomes.},
+	titleaddon = {{DeepAI}},
+	date = {2019-05-17},
+	file = {Snapshot:/home/christophe/Zotero/storage/IWAUBAJG/supervised-learning.html:text/html},
+}
+
+@online{wood_unsupervised_2020,
+	title = {Unsupervised Learning},
+	url = {https://deepai.org/machine-learning-glossary-and-terms/unsupervised-learning},
+	abstract = {Unsupervised learning is a deep learning technique that identifies hidden patterns, or clusters in raw, unlabeled data.},
+	titleaddon = {{DeepAI}},
+	author = {Wood, Thomas},
+	date = {2020-08-13},
+	file = {Snapshot:/home/christophe/Zotero/storage/PQSX2UDE/unsupervised-learning.html:text/html},
+}
+
+@book{goodfellow_deep_2016,
+	title = {Deep Learning},
+	publisher = {{MIT} Press},
+	author = {Goodfellow, Ian and Bengio, Yoshua and Courville, Aaron},
+	date = {2016},
+}
+
+@article{rosenblatt_perceptron_1958,
+	title = {The perceptron: A probabilistic model for information storage and organization in the brain},
+	volume = {65},
+	issn = {1939-1471},
+	doi = {10.1037/h0042519},
+	shorttitle = {The perceptron},
+	pages = {386--408},
+	number = {6},
+	journaltitle = {Psychological Review},
+	author = {Rosenblatt, Frank},
+	date = {1958},
+	keywords = {Brain, Cognition, Memory, Nervous System},
+	file = {Snapshot:/home/christophe/Zotero/storage/82T6HB2E/1959-09865-001.html:text/html},
+}
+
+@article{michie_boxes_1968,
+	title = {{BOXES}: An experiment in adaptive control},
+	volume = {2},
+	pages = {137--152},
+	journaltitle = {Machine intelligence},
+	author = {Michie, Donald and Chambers, Roger A.},
+	date = {1968},
+	langid = {english},
+}
+
+@inproceedings{lecun_theoretical_1988,
+	title = {A theoretical framework for back-propagation},
+	volume = {1},
+	pages = {21--28},
+	booktitle = {Proceedings of the 1988 connectionist models summer school},
+	author = {{LeCun}, Yann and Touresky, D and Hinton, Geoffrey and Sejnowski, Terrence},
+	date = {1988},
+}
+
+@online{mcgonagle_backpropagation_nodate,
+	title = {Backpropagation},
+	url = {https://brilliant.org/wiki/backpropagation/},
+	titleaddon = {Brillant.org},
+	author = {{McGonagle}, John and Shalkouski, George and Williams, Christopher and Hsu, Andrew and Khim, Jimin and Miller, Aaron},
+	langid = {english},
+	file = {Snapshot:/home/christophe/Zotero/storage/4MIXPGXC/backpropagation.html:text/html},
+}
+
+@online{mahendru_loss_2019,
+	title = {Loss Function {\textbar} Loss Function In Machine Learning},
+	url = {https://www.analyticsvidhya.com/blog/2019/08/detailed-guide-7-loss-functions-machine-learning-python-code/},
+	titleaddon = {Analytics Vidhya},
+	author = {Mahendru, Khyati},
+	date = {2019-08-14},
+	langid = {english},
+	file = {Snapshot:/home/christophe/Zotero/storage/BX9ME66B/detailed-guide-7-loss-functions-machine-learning-python-code.html:text/html},
+}
+
+@article{lecun_backpropagation_1989,
+	title = {Backpropagation Applied to Handwritten Zip Code Recognition},
+	volume = {1},
+	issn = {0899-7667},
+	doi = {10.1162/neco.1989.1.4.541},
+	pages = {541--551},
+	number = {4},
+	journaltitle = {Neural Computation},
+	author = {{LeCun}, Yann and Boser, B. and Denker, J. S. and Henderson, D. and Howard, R. E. and Hubbard, W. and Jackel, L. D.},
+	date = {1989-12},
+	note = {Conference Name: Neural Computation},
+	file = {IEEE Xplore Abstract Record:/home/christophe/Zotero/storage/8WHVPH3K/6795724.html:text/html},
+}
+
+@online{saha_comprehensive_2018,
+	title = {A Comprehensive Guide to Convolutional Neural Networks — the {ELI}5 way},
+	url = {https://towardsdatascience.com/a-comprehensive-guide-to-convolutional-neural-networks-the-eli5-way-3bd2b1164a53},
+	titleaddon = {Medium},
+	author = {Saha, Sumit},
+	date = {2018-12-17},
+	langid = {english},
+	file = {Snapshot:/home/christophe/Zotero/storage/TB9LL87S/a-comprehensive-guide-to-convolutional-neural-networks-the-eli5-way-3bd2b1164a53.html:text/html},
+}
+
+@article{litjens_evaluation_2014,
+	title = {Evaluation of prostate segmentation algorithms for {MRI}: The {PROMISE}12 challenge},
+	volume = {18},
+	issn = {1361-8415},
+	doi = {10.1016/j.media.2013.12.002},
+	shorttitle = {Evaluation of prostate segmentation algorithms for {MRI}},
+	pages = {359--373},
+	number = {2},
+	journaltitle = {Medical Image Analysis},
+	shortjournal = {Medical Image Analysis},
+	author = {Litjens, Geert and Toth, Robert and van de Ven, Wendy and Hoeks, Caroline and Kerkstra, Sjoerd and van Ginneken, Bram and Vincent, Graham and Guillard, Gwenael and Birbeck, Neil and Zhang, Jindang and Strand, Robin and Malmberg, Filip and Ou, Yangming and Davatzikos, Christos and Kirschner, Matthias and Jung, Florian and Yuan, Jing and Qiu, Wu and Gao, Qinquan and Edwards, Philip “Eddie” and Maan, Bianca and van der Heijden, Ferdinand and Ghose, Soumya and Mitra, Jhimli and Dowling, Jason and Barratt, Dean and Huisman, Henkjan and Madabhushi, Anant},
+	date = {2014-02-01},
+	langid = {english},
+	keywords = {{MRI}, Segmentation, Challenge, Prostate},
+	file = {Accepted Version:/home/christophe/Zotero/storage/SJNWK96L/Litjens et al. - 2014 - Evaluation of prostate segmentation algorithms for.pdf:application/pdf},
+}
+
+@article{srivastava_dropout_2014,
+	title = {Dropout: a simple way to prevent neural networks from overfitting},
+	volume = {15},
+	shorttitle = {Dropout},
+	pages = {1929--1958},
+	number = {1},
+	journaltitle = {The journal of machine learning research},
+	author = {Srivastava, Nitish and Hinton, Geoffrey and Krizhevsky, Alex and Sutskever, Ilya and Salakhutdinov, Ruslan},
+	date = {2014},
+	note = {Publisher: {JMLR}. org},
+	file = {Full Text:/home/christophe/Zotero/storage/KI3WQGDM/Srivastava et al. - 2014 - Dropout a simple way to prevent neural networks f.pdf:application/pdf},
+}
+
+@online{global_cancer_observatory_cancer_2020,
+	title = {Cancer today},
+	url = {http://gco.iarc.fr/today/home},
+	author = {Global Cancer Observatory},
+	date = {2020},
+	langid = {english},
+	file = {Snapshot:/home/christophe/Zotero/storage/N44FQ9X8/online-analysis-table.html:text/html},
+}
+
+@online{sharma_activation_2021,
+	title = {Activation Functions in Neural Networks},
+	url = {https://towardsdatascience.com/activation-functions-neural-networks-1cbd9f8d91d6},
+	titleaddon = {Medium},
+	author = {Sharma, Sagar},
+	date = {2021-07-04},
+	langid = {english},
+	file = {Snapshot:/home/christophe/Zotero/storage/KVH29NPF/activation-functions-neural-networks-1cbd9f8d91d6.html:text/html},
+}
+
+@article{harris_array_2020,
+	title = {Array programming with {NumPy}},
+	volume = {585},
+	rights = {2020 The Author(s)},
+	issn = {1476-4687},
+	url = {https://www.nature.com/articles/s41586-020-2649-2},
+	doi = {10.1038/s41586-020-2649-2},
+	pages = {357--362},
+	number = {7825},
+	journaltitle = {Nature},
+	author = {Harris, Charles R. and Millman, K. Jarrod and van der Walt, Stéfan J. and Gommers, Ralf and Virtanen, Pauli and Cournapeau, David and Wieser, Eric and Taylor, Julian and Berg, Sebastian and Smith, Nathaniel J. and Kern, Robert and Picus, Matti and Hoyer, Stephan and van Kerkwijk, Marten H. and Brett, Matthew and Haldane, Allan and del Río, Jaime Fernández and Wiebe, Mark and Peterson, Pearu and Gérard-Marchant, Pierre and Sheppard, Kevin and Reddy, Tyler and Weckesser, Warren and Abbasi, Hameer and Gohlke, Christoph and Oliphant, Travis E.},
+	date = {2020-09},
+	langid = {english},
+	keywords = {Computational neuroscience, Computational science, Computer science, Software, Solar physics},
+	file = {Full Text PDF:/home/christophe/Zotero/storage/SBF3FW3Y/Harris et al. - 2020 - Array programming with NumPy.pdf:application/pdf;Snapshot:/home/christophe/Zotero/storage/IBLT72TL/s41586-020-2649-2.html:text/html},
+}
+
+@online{noauthor_brain_nodate,
+	title = {Brain {MRI} Images for Brain Tumor Detection},
+	url = {https://kaggle.com/navoneel/brain-mri-images-for-brain-tumor-detection},
+	langid = {english},
+	file = {Snapshot:/home/christophe/Zotero/storage/R92B4QKX/brain-mri-images-for-brain-tumor-detection.html:text/html},
+}
+
+@article{armato_prostatex_2018,
+	title = {{PROSTATEx} Challenges for computerized classification of prostate lesions from multiparametric magnetic resonance images},
+	volume = {5},
+	pages = {044501},
+	number = {4},
+	journaltitle = {Journal of Medical Imaging},
+	author = {Armato, Samuel G. and Huisman, Henkjan and Drukker, Karen and Hadjiiski, Lubomir and Kirby, Justin S. and Petrick, Nicholas and Redmond, George and Giger, Maryellen L. and Cha, Kenny and Mamonov, Artem},
+	date = {2018},
+	note = {Publisher: {SPIE}},
+	file = {Snapshot:/home/christophe/Zotero/storage/EVWWS4KY/206904.html:text/html;Snapshot:/home/christophe/Zotero/storage/IYW2AYJ4/prostatex-challenges-for-computerized-classification-of-prostate-.html:text/html;Snapshot:/home/christophe/Zotero/storage/XSM3Y5FN/oairepository.ubn.ru.html:text/html;Snapshot:/home/christophe/Zotero/storage/6KMVV46V/1.JMI.5.4.html:text/html;Snapshot:/home/christophe/Zotero/storage/ADJHWV7Q/1.JMI.5.4.044501.html:text/html;Full Text:/home/christophe/Zotero/storage/Z6G7ZLTR/PMC6228312.html:text/html;Snapshot:/home/christophe/Zotero/storage/38C476HS/30840739.html:text/html;Snapshot:/home/christophe/Zotero/storage/LI7YY3M3/199505.html:text/html;Snapshot:/home/christophe/Zotero/storage/WDIDRWK8/1.JMI.5.4.044501.html:text/html;Snapshot:/home/christophe/Zotero/storage/BGMF2XPZ/30840739.html:text/html},
+}
+
+@article{kirby_lungx_2016,
+	title = {{LUNGx} Challenge for computerized lung nodule classification},
+	volume = {3},
+	pages = {044506},
+	number = {4},
+	journaltitle = {Journal of Medical Imaging},
+	author = {Kirby, Justin S. and Armato, Samuel G. and Drukker, Karen and Li, Feng and Hadjiiski, Lubomir and Tourassi, Georgia D. and Clarke, Laurence P. and Engelmann, Roger M. and Giger, Maryellen L. and Redmond, George},
+	date = {2016},
+	note = {Publisher: International Society for Optics and Photonics},
+	file = {Full Text:/home/christophe/Zotero/storage/LSTWZDGT/Kirby et al. - 2016 - LUNGx Challenge for computerized lung nodule class.pdf:application/pdf;Snapshot:/home/christophe/Zotero/storage/PGTEE3XM/1.JMI.3.4.044506.html:text/html},
+}
+
+@software{the_pandas_development_team_pandas-devpandas_2020,
+	title = {pandas-dev/pandas: Pandas},
+	url = {https://zenodo.org/record/3715232},
+	shorttitle = {pandas-dev/pandas},
+	version = {1.3.5},
+	publisher = {Zenodo},
+	author = {The pandas development team},
+	date = {2020-03-18},
+	doi = {10.5281/zenodo.3715232},
+	file = {Zenodo Snapshot:/home/christophe/Zotero/storage/39WBZL2R/3715232.html:text/html},
+}
+
+@inproceedings{mckinney_data_2010,
+	title = {Data structures for statistical computing in python},
+	volume = {445},
+	doi = {10.25080/Majora-92bf1922-00a},
+	pages = {51--56},
+	booktitle = {Proceedings of the 9th Python in Science Conference},
+	publisher = {Austin, {TX}},
+	author = {{McKinney}, Wes},
+	date = {2010},
+	file = {Full Text:/home/christophe/Zotero/storage/2LXQMZP2/McKinney - 2010 - Data structures for statistical computing in pytho.pdf:application/pdf},
+}
+
+@article{mason_su-e-t-33_2011,
+	title = {{SU}-E-T-33: pydicom: an open source {DICOM} library},
+	volume = {38},
+	doi = {10.1118/1.3611983},
+	shorttitle = {{SU}-E-T-33},
+	pages = {3493--3493},
+	number = {6},
+	journaltitle = {Medical Physics},
+	author = {Mason, Darcy},
+	date = {2011},
+	note = {Publisher: Wiley Online Library},
+	file = {Snapshot:/home/christophe/Zotero/storage/C2AQA7H3/1.html:text/html},
+}
+
+@article{schneider_calibration_1996,
+	title = {The calibration of {CT} Hounsfield units for radiotherapy treatment planning},
+	volume = {41},
+	pages = {111--124},
+	number = {1},
+	journaltitle = {Physics in Medicine and Biology},
+	author = {Schneider, Uwe and Pedroni, Eros and Lomax, Antony},
+	date = {1996},
+	note = {Publisher: Institute of Physics and {IOP} Publishing Limited},
+	file = {Snapshot:/home/christophe/Zotero/storage/QBVYK8DZ/item.html:text/html;Snapshot:/home/christophe/Zotero/storage/HNRG27X8/8685250.html:text/html;Full Text:/home/christophe/Zotero/storage/YKRQWHWV/Schneidert et al. - The calibration of CT Hounsfield units for radioth.pdf:application/pdf;Snapshot:/home/christophe/Zotero/storage/KHWN8H24/abstract.html:text/html},
+}
+
+@article{mildenberger_introduction_2002,
+	title = {Introduction to the {DICOM} standard},
+	volume = {12},
+	pages = {920--927},
+	number = {4},
+	journaltitle = {European Radiology},
+	author = {Mildenberger, Peter and Eichelberg, Marco and Martin, Eric},
+	date = {2002},
+	note = {Publisher: Springer-Verlag {GmbH}},
+	file = {Snapshot:/home/christophe/Zotero/storage/RVHTHVWN/s003300101100.html:text/html;Snapshot:/home/christophe/Zotero/storage/VY959WJV/1.html:text/html;Snapshot:/home/christophe/Zotero/storage/KCHZDB9N/item.html:text/html;Snapshot:/home/christophe/Zotero/storage/FTF923IU/abstract.html:text/html},
+}
+
+@book{hebb_organization_2002,
+	location = {New York},
+	title = {The Organization of Behavior: A Neuropsychological Theory},
+	isbn = {978-1-4106-1240-3},
+	shorttitle = {The Organization of Behavior},
+	pagetotal = {378},
+	publisher = {Psychology Press},
+	author = {Hebb, Donald O.},
+	date = {2002-05-01},
+	doi = {10.4324/9781410612403},
+}
+
+@article{kimpe_increasing_2007,
+	title = {Increasing the Number of Gray Shades in Medical Display Systems—How Much is Enough?},
+	volume = {20},
+	issn = {0897-1889},
+	doi = {10.1007/s10278-006-1052-3},
+	pages = {422--432},
+	number = {4},
+	journaltitle = {Journal of Digital Imaging},
+	shortjournal = {J Digit Imaging},
+	author = {Kimpe, Tom and Tuytschaever, Tom},
+	date = {2007-12},
+	pmid = {17195900},
+	pmcid = {PMC3043920},
+	file = {PubMed Central Full Text PDF:/home/christophe/Zotero/storage/8QUXJ9ZD/Kimpe and Tuytschaever - 2007 - Increasing the Number of Gray Shades in Medical Di.pdf:application/pdf},
+}
+
+@article{simonyan_very_2015,
+	title = {Very Deep Convolutional Networks for Large-Scale Image Recognition},
+	journaltitle = {{arXiv}:1409.1556 [cs]},
+	author = {Simonyan, Karen and Zisserman, Andrew},
+	date = {2015-04-10},
+	eprinttype = {arxiv},
+	eprint = {1409.1556},
+	keywords = {Computer Science - Computer Vision and Pattern Recognition},
+	file = {arXiv Fulltext PDF:/home/christophe/Zotero/storage/GLHBQTIQ/Simonyan and Zisserman - 2015 - Very Deep Convolutional Networks for Large-Scale I.pdf:application/pdf;arXiv.org Snapshot:/home/christophe/Zotero/storage/VYRY66PK/1409.html:text/html},
+}
