--- a/structure/info.tex
+++ b/structure/info.tex
@@ -4,15 +4,16 @@
 % THESIS INFORMATION
 %----------------------------------------------------------------------------------------
 
-\thesistitle{Thesis Title} % Your thesis title, this is used in the title and abstract, print it elsewhere with \ttitle
+% \thesistitle{Preprocessing New Datasets And Adding Segmentation To A Computer Aided Diagnosis System: The Hydra Model} % Your thesis title, this is used in the title and abstract, print it elsewhere with \ttitle
+\thesistitle{Pre-Processing Segmentation Datasets for the Hydra Framework}
 \supervisor{Prof. Dr. Philippe Cudré-Mauroux} % Your supervisor's name, this is used in the title page, print it elsewhere with \supname
-\cosupervisor{Co-supervisor Name} % If you have a co-supervisor, include it here. This is used in the title page, print it elsewhere with \supname
+\cosupervisor{Dr. Giuseppe Cuccu} % If you have a co-supervisor, include it here. This is used in the title page, print it elsewhere with \cosupname
 \degree{Bachelor} % Your degree name, this is used in the title page and abstract, print it elsewhere with \degreename
-\author{Author Name} % Your name, this is used in the title page and abstract, print it elsewhere with \authorname
+\author{Christophe Broillet} % Your name, this is used in the title page and abstract, print it elsewhere with \authorname
 \addresses{Bd de Pérolles 90} % Your address, this is not currently used anywhere in the template, print it elsewhere with \addressname
 
 \subject{Computer Science} % Your subject area, this is not currently used anywhere in the template, print it elsewhere with \subjectname
-\keywords{keywords, list, here} % Keywords for your thesis, this is not currently used anywhere in the template, print it elsewhere with \keywordnames
+\keywords{Machine Learning (ML), Deep Learning, Convolutional Neural Network (CNN), Computer Aided Diagnosis (CAD) System, Segmentation, Cancer} % Keywords for your thesis, this is not currently used anywhere in the template, print it elsewhere with \keywordnames
 \university{\href{http://www.unifr.ch}{University of Fribourg}} % Your university's name and URL, this is used in the title page and abstract, print it elsewhere with \univname
 \department{\href{https://www3.unifr.ch/inf/fr/}{Department of Informatics}} % Your department's name and URL, this is used in the title page and abstract, print it elsewhere with \deptname
 \group{\href{https://www3.unifr.ch/inf/en/exascale-infolab.html}{eXascale Infolab}} % Your research group's name and URL, this is used in the title page, print it elsewhere with \groupname
