--- a/structure/title.tex
+++ b/structure/title.tex
@@ -28,19 +28,20 @@
 \begin{minipage}[t]{0.4\textwidth}
 \begin{flushleft} \large
 \emph{Author:}\\
-\href{mailto://david.bucher@unifr.ch}{\authorname} % Author name - remove the \href bracket to remove the link
+\href{mailto://christophe.broillet@unifr.ch}{\authorname} % Author name - remove the \href bracket to remove the link
 \end{flushleft}
 \end{minipage}
 \begin{minipage}[t]{0.4\textwidth}
 \begin{flushright} \large
-\emph{Supervisor:} \\
+\emph{Supervisors:} \\
+\href{https://exascale.info/members/giuseppe-cuccu/}{\cosupname} \\ % Co-supervisor name - remove the \href bracket to remove the link
 \href{https://exascale.info/phil}{\supname} % Supervisor name - remove the \href bracket to remove the link
-\\\vspace*{1ex}\emph{Co-Supervisor:} \\ % Remove these two lines if no co-supervisor is involved
-\href{https://exascale.info/members/}{\cosupname} % Co-supervisor name - remove the \href bracket to remove the link
+% \\\vspace*{1ex}\emph{Co-Supervisor:} \\ % Remove these two lines if no co-supervisor is involved
+% \href{https://exascale.info/members/giuseppe-cuccu/}{\cosupname} % Co-supervisor name - remove the \href bracket to remove the link
 \end{flushright}
 \end{minipage}\\[1cm]
 
-January 01, 1970 % date of the official defense
+February 14, 2022 % date of the official defense
 \vspace*{.06\textheight}
 
 %\large \textit{A thesis submitted in fulfillment of the requirements\\ for the degree of \degreename}\textit{ in the}\\[0.3cm] % University requirement text
